--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -3,13 +3,13 @@
   <display-name>BaseCamp</display-name>
   
   <servlet>
-  	<servlet-name>TestServlet</servlet-name>
-  	<servlet-class>bc.controller.TestServlet</servlet-class>
+  	<servlet-name>ControllerServlet</servlet-name>
+  	<servlet-class>bc.controller.ControllerServlet</servlet-class>
   </servlet>
   
   <servlet-mapping>
-  	<servlet-name>TestServlet</servlet-name>
-  	<url-pattern>/TestServlet</url-pattern>
+  	<servlet-name>ControllerServlet</servlet-name>
+  	<url-pattern>/ControllerServlet</url-pattern>
   </servlet-mapping>
   
   <welcome-file-list>
